# kernelhawkes

./: README.md  README.rst  pyproject.toml  setup.py
examples/: example1.py
kernelhawkes/: __init__.py  rkhs_hawkes.py
src/kernelhawkes/: rkhs_hawkes.py
src/kernelhawkes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/kernelhawkes/multivariatehawkesinhibition/: multivariate_exponential_process.py
